--- a/Startup/Startup.csproj
+++ b/Startup/Startup.csproj
@@ -52,6 +52,7 @@
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{42e9fb85-f3d7-470a-b028-2b517b0dd339}</Project>
       <Name>Core</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
